<?xml version="1.0"?>
<package>
  <name>sd_filter</name>
  <version>0.0.1</version>
  <description>The sd_filter package</description>

  <maintainer email="Nicko_Dema@protonmail.com">Nikolay Dema</maintainer>
  <author email="Nicko_Dema@protonmail.com">Nikolay Dema</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
